openecomp-be/lib/openecomp-tosca-lib/src/test/resources/vspmanager.csar/manifest/invalid/metadata-mixed-entries.mf
metadata:
  vnf_product_name: vPP
  vnf_provider_id: Ericsson
  vnf_release_date_time: 2019-08-29T22:17:39.275281
  pnfd_archive_version: 1.0
